--- a/Level0/Unit1/teacher/index.html
+++ b/Level0/Unit1/teacher/index.html
@@ -81,7 +81,6 @@
 
         .activities a:hover {
             transform: translateY(-5px);
-            /* remove box-shadow for full transparency */
         }
 
         .activities img {
@@ -90,28 +89,16 @@
             object-fit: contain;
         }
 
-        /* On very small screens, we allow wrapping naturally; spacing should be fine. */
         @media (max-width: 600px) {
-            .activities {
-                justify-content: center;
-            }
-
-            .activities a {
-                width: 120px;
-                height: 140px;
-            }
-
-            .activities img {
-                width: 100%;
-                max-height: 120px;
-            }
+            .activities { justify-content: center; }
+            .activities a { width: 120px; height: 140px; }
+            .activities img { width: 100%; max-height: 120px; }
         }
 
         /* Transparent content containers */
         .content {
             max-width: 800px;
             margin: 40px auto;
-            /* Added extra top padding to avoid overlap with the close button */
             padding: 40px 20px 20px;
             background-color: transparent; 
             border: none;
@@ -136,15 +123,13 @@
             transition: background-color 0.3s ease;
         }
 
-        .close-btn:hover {
-            background-color: #e0553c;
-        }
+        .close-btn:hover { background-color: #e0553c; }
 
         /* Print button (novo) */
         .modal-print-btn {
             position: absolute;
             top: 10px;
-            right: 90px; /* fica à esquerda do Close */
+            right: 90px; /* à esquerda do Close */
             background-color: #4CAF50;
             color: #fff;
             border: none;
@@ -155,116 +140,55 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease;
         }
-        .modal-print-btn:hover {
-            background-color: #45a049;
-        }
+        .modal-print-btn:hover { background-color: #45a049; }
 
-        /* Base class for formatted text, now all bold and slightly larger */
         .formatted-text {
             line-height: 1.6;
-            font-size: 1.1rem; /* slightly bigger font */
-            font-weight: bold; /* ALL text in bold */
+            font-size: 1.1rem;
+            font-weight: bold;
             color: #444;
         }
+        .formatted-text h3 { color: #333; margin-top: 1.5em; margin-bottom: 0.5em; }
+        .formatted-text strong { color: #4CAF50; }
+        .formatted-text em { font-style: italic; }
+        .formatted-text ul { margin-left: 1.5em; margin-bottom: 1em; }
+        .formatted-text li { margin-bottom: 0.5em; }
+        .formatted-text hr { margin: 20px 0; border: 0; border-top: 1px solid #ccc; }
+        .formatted-text p { margin-bottom: 1em; }
+        .formatted-text br { margin-bottom: 1em; }
 
-        .formatted-text h3 {
-            color: #333;
-            margin-top: 1.5em;
-            margin-bottom: 0.5em;
-        }
-
-        .formatted-text strong {
-            color: #4CAF50; /* highlight for double-bold is not very visible but kept for color difference */
-        }
-
-        .formatted-text em {
-            font-style: italic;
-        }
-
-        .formatted-text ul {
-            margin-left: 1.5em;
-            margin-bottom: 1em;
-        }
-
-        .formatted-text li {
-            margin-bottom: 0.5em;
-        }
-
-        .formatted-text hr {
-            margin: 20px 0;
-            border: 0;
-            border-top: 1px solid #ccc;
-        }
-
-        .formatted-text p {
-            margin-bottom: 1em;
-        }
-
-        .formatted-text br {
-            margin-bottom: 1em;
-        }
-
-        /* Responsive adjustments */
         @media (max-width: 800px) {
-            .content {
-                padding: 50px 15px 15px;
-                margin: 20px auto;
-            }
-
-            h1 {
-                font-size: 2.2rem;
-            }
-
-            h2 {
-                font-size: 1.6rem;
-            }
-
-            .buttons button {
-                font-size: 0.9rem;
-            }
+            .content { padding: 50px 15px 15px; margin: 20px auto; }
+            h1 { font-size: 2.2rem; }
+            h2 { font-size: 1.6rem; }
+            .buttons button { font-size: 0.9rem; }
         }
 
-        /* Styles for the image modal */
+        /* Modal */
         .modal-overlay {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
             background: rgba(0,0,0,0.8);
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            display: flex; align-items: center; justify-content: center;
             z-index: 9999;
         }
-
         .modal-content img {
-            max-width: 80%;
-            max-height: 80%;
-            display: block;
-            margin: auto;
+            max-width: 80%; max-height: 80%;
+            display: block; margin: auto;
         }
-
         .modal-close-btn {
             position: absolute;
-            top: 20px;
-            right: 20px;
-            background-color: #ddd;
-            border: none;
-            padding: 8px 12px;
-            cursor: pointer;
-            border-radius: 5px;
+            top: 20px; right: 20px;
+            background-color: #ddd; border: none;
+            padding: 8px 12px; cursor: pointer; border-radius: 5px;
         }
-
-        .modal-close-btn:hover {
-            background-color: #bbb;
-        }
+        .modal-close-btn:hover { background-color: #bbb; }
     </style>
 </head>
 <body>
     <h1>Teacher Resources</h1>
     
-    <!-- Top buttons (removed "Lesson Plan" as requested before) -->
     <div class="buttons">
         <button onclick="goBackToLevel()">Back</button>
     </div>
@@ -280,7 +204,6 @@
         </a>
     </div>
 
-    <!-- Teachers Guide container -->
     <div class="content" id="teachersGuideContainer">
         <button class="close-btn" onclick="closeTeachersGuide()">X</button>
         <div id="teachersGuideContent" class="formatted-text"></div>
@@ -297,7 +220,6 @@
         </a>
     </div>
 
-    <!-- Creative Activity container -->
     <div class="content" id="creativeActivityContainer">
         <button class="close-btn" onclick="closeCreativeActivity()">X</button>
         <div id="creativeActivityContent" class="formatted-text"></div>
@@ -313,41 +235,17 @@
     </div>
 
     <script>
-        /**
-         * Go back to the previous level
-         */
         function goBackToLevel() {
             const currentUrl = window.location.href;
             const url = new URL(currentUrl);
-
-            // Remove "teacher" do final da pathname
             let pathParts = url.pathname.split('/');
-            
-            // Remove string vazia no final se a URL terminar com /
-            if (pathParts[pathParts.length - 1] === "") {
-                pathParts.pop();
-            }
-
-            if (pathParts[pathParts.length - 1] === "teacher") {
-                pathParts.pop(); // remove "teacher"
-            }
-
-            // Constrói a nova URL (sem "teacher")
+            if (pathParts[pathParts.length - 1] === "") pathParts.pop();
+            if (pathParts[pathParts.length - 1] === "teacher") pathParts.pop();
             const newPath = pathParts.join('/') + '/index.html';
             const newUrl = `${url.origin}${newPath}`;
-
             window.location.href = newUrl;
         }
 
-        /**
-         * Convert plain text to basic HTML formatting:
-         * - Lines starting with ### => <h3>
-         * - Lines with '---' => <hr>
-         * - **bold** => <strong>
-         * - lines starting with '- ' => <li> inside a <ul>
-         * - blank lines => <br>
-         * - otherwise => <p> line
-         */
         function parsePlainTextToHtml(text) {
             const lines = text.split('\n');
             let html = '';
@@ -356,48 +254,28 @@
             for (let line of lines) {
                 let trimmed = line.trim();
 
-                // If line is '---'
                 if (trimmed === '---') {
-                    if (inUl) {
-                        html += '</ul>';
-                        inUl = false;
-                    }
-                    html += '<hr>';
-                    continue;
+                    if (inUl) { html += '</ul>'; inUl = false; }
+                    html += '<hr>'; continue;
                 }
 
-                // If line starts with ### => <h3>
                 if (trimmed.startsWith('###')) {
-                    if (inUl) {
-                        html += '</ul>';
-                        inUl = false;
-                    }
+                    if (inUl) { html += '</ul>'; inUl = false; }
                     let content = trimmed.replace(/^###\s*/, '');
                     content = applyBold(content);
-                    html += `<h3>${content}</h3>`;
-                    continue;
+                    html += `<h3>${content}</h3>`; continue;
                 }
 
-                // If line starts with '- ' => list item
                 if (trimmed.startsWith('- ')) {
-                    if (!inUl) {
-                        html += '<ul>';
-                        inUl = true;
-                    }
+                    if (!inUl) { html += '<ul>'; inUl = true; }
                     let content = trimmed.replace(/^- /, '');
                     content = applyBold(content);
-                    html += `<li>${content}</li>`;
-                    continue;
+                    html += `<li>${content}</li>`; continue;
                 }
 
-                // If none of the above => treat as a paragraph
-                if (inUl) {
-                    html += '</ul>';
-                    inUl = false;
-                }
+                if (inUl) { html += '</ul>'; inUl = false; }
 
                 if (trimmed.length === 0) {
-                    // blank line => <br>
                     html += '<br>';
                 } else {
                     let content = applyBold(line);
@@ -405,24 +283,14 @@
                 }
             }
 
-            // close any open <ul>
-            if (inUl) {
-                html += '</ul>';
-            }
-
+            if (inUl) html += '</ul>';
             return html;
         }
 
-        /**
-         * Convert **text** into <strong>text</strong>
-         */
         function applyBold(str) {
             return str.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
         }
 
-        /**
-         * Show text file content in the Teachers Guide container
-         */
         function showTeachersGuideContent(fileName) {
             closeCreativeActivity();
             fetch(fileName)
@@ -433,17 +301,11 @@
                 const formatted = parsePlainTextToHtml(data);
                 contentDiv.innerHTML = formatted;
                 container.style.display = 'block';
-                // Smooth scroll to container
                 container.scrollIntoView({ behavior: 'smooth' });
             })
-            .catch(error => {
-                console.error('Error loading text file:', error);
-            });
+            .catch(error => { console.error('Error loading text file:', error); });
         }
 
-        /**
-         * Close the Teachers Guide container
-         */
         function closeTeachersGuide() {
             const container = document.getElementById('teachersGuideContainer');
             const contentDiv = document.getElementById('teachersGuideContent');
@@ -451,9 +313,6 @@
             container.style.display = 'none';
         }
 
-        /**
-         * Show text file content in the Creative Activity container
-         */
         function showCreativeActivityContent(fileName) {
             closeTeachersGuide();
             fetch(fileName)
@@ -466,14 +325,9 @@
                 container.style.display = 'block';
                 container.scrollIntoView({ behavior: 'smooth' });
             })
-            .catch(error => {
-                console.error('Error loading text file:', error);
-            });
+            .catch(error => { console.error('Error loading text file:', error); });
         }
 
-        /**
-         * Close the Creative Activity container
-         */
         function closeCreativeActivity() {
             const container = document.getElementById('creativeActivityContainer');
             const contentDiv = document.getElementById('creativeActivityContent');
@@ -481,15 +335,12 @@
             container.style.display = 'none';
         }
 
-        /**
-         * Show image thumbnails (documents) in the Creative Activity container
-         */
+        /* ---- Documents ---- */
         function showDocuments() {
             closeTeachersGuide();
             const container = document.getElementById('creativeActivityContainer');
             const contentDiv = document.getElementById('creativeActivityContent');
 
-            // Example list of image files
             const imageFiles = [
                 'imagem1.png',
                 'imagem2.png',
@@ -508,10 +359,10 @@
                 html += `
                     <div style="margin: 10px; text-align: center;">
                         <img 
-                            src="\${file}" 
-                            alt="\${file}" 
+                            src="${file}" 
+                            alt="${file}" 
                             style="width: 100px; cursor: pointer;"
-                            onclick="openImageModal('\${file}')"
+                            onclick="openImageModal('${file}')"
                         >
                     </div>
                 `;
@@ -524,48 +375,30 @@
             container.scrollIntoView({ behavior: 'smooth' });
         }
 
-        /**
-         * Open modal to show an enlarged image
-         * (ATUALIZADO: adiciona botão Print)
-         */
+        /* Modal com botão Print */
         function openImageModal(imgSrc) {
             const overlay = document.createElement('div');
             overlay.className = 'modal-overlay';
             overlay.innerHTML = `
                 <div class="modal-content">
                     <button class="modal-close-btn" onclick="closeModal()">Close</button>
-                    <button class="modal-print-btn" onclick="printImage('\${imgSrc}')">Print</button>
-                    <img src="\${imgSrc}" alt="Enlarged">
+                    <button class="modal-print-btn" onclick="printImage('${imgSrc}')">Print</button>
+                    <img src="${imgSrc}" alt="Enlarged">
                 </div>
             `;
             document.body.appendChild(overlay);
         }
 
-        /**
-         * Close the image modal
-         */
         function closeModal() {
             const overlay = document.querySelector('.modal-overlay');
-            if (overlay) {
-                document.body.removeChild(overlay);
-            }
+            if (overlay) document.body.removeChild(overlay);
         }
 
-        /**
-         * Print the enlarged image
-         * - Abre uma nova janela com a imagem absoluta
-         * - Chama print() ao carregar
-         * - Fecha a janela após a impressão
-         */
         function printImage(imgSrc) {
             try {
                 const absoluteSrc = new URL(imgSrc, window.location.href).href;
                 const printWin = window.open('', '_blank');
-
-                if (!printWin) {
-                    alert('Por favor, permita pop-ups para imprimir a imagem.');
-                    return;
-                }
+                if (!printWin) { alert('Por favor, permita pop-ups para imprimir a imagem.'); return; }
 
                 printWin.document.open();
                 printWin.document.write(`<!DOCTYPE html>
@@ -574,22 +407,14 @@
 <meta charset="utf-8">
 <title>Print Image</title>
 <style>
-  @media print {
-    body, html { margin: 0; }
-  }
-  html, body {
-    height: 100%;
-  }
+  @media print { body, html { margin: 0; } }
+  html, body { height: 100%; }
   body {
     margin: 0; padding: 0;
     display: flex; align-items: center; justify-content: center;
     height: 100vh;
   }
-  img {
-    max-width: 100%;
-    max-height: 100vh;
-    display: block;
-  }
+  img { max-width: 100%; max-height: 100vh; display: block; }
 </style>
 </head>
 <body>
@@ -598,10 +423,8 @@
     (function() {
       const img = document.querySelector('img');
       function doPrint() {
-        try {
-          window.focus();
-          window.print();
-        } finally {
+        try { window.focus(); window.print(); }
+        finally {
           if ('onafterprint' in window) {
             window.onafterprint = function(){ window.close(); };
           } else {
@@ -609,12 +432,8 @@
           }
         }
       }
-      if (img && !img.complete) {
-        img.onload = doPrint;
-        img.onerror = doPrint; // ainda assim tenta imprimir/fechar
-      } else {
-        doPrint();
-      }
+      if (img && !img.complete) { img.onload = doPrint; img.onerror = doPrint; }
+      else { doPrint(); }
     })();
   <\/script>
 </body>
