--- a/Level0/Unit1/teacher/index.html
+++ b/Level0/Unit1/teacher/index.html
@@ -81,6 +81,7 @@
 
         .activities a:hover {
             transform: translateY(-5px);
+            /* remove box-shadow for full transparency */
         }
 
         .activities img {
@@ -89,16 +90,28 @@
             object-fit: contain;
         }
 
+        /* On very small screens, we allow wrapping naturally; spacing should be fine. */
         @media (max-width: 600px) {
-            .activities { justify-content: center; }
-            .activities a { width: 120px; height: 140px; }
-            .activities img { width: 100%; max-height: 120px; }
+            .activities {
+                justify-content: center;
+            }
+
+            .activities a {
+                width: 120px;
+                height: 140px;
+            }
+
+            .activities img {
+                width: 100%;
+                max-height: 120px;
+            }
         }
 
         /* Transparent content containers */
         .content {
             max-width: 800px;
             margin: 40px auto;
+            /* Added extra top padding to avoid overlap with the close button */
             padding: 40px 20px 20px;
             background-color: transparent; 
             border: none;
@@ -123,13 +136,15 @@
             transition: background-color 0.3s ease;
         }
 
-        .close-btn:hover { background-color: #e0553c; }
+        .close-btn:hover {
+            background-color: #e0553c;
+        }
 
         /* Print button (novo) */
         .modal-print-btn {
             position: absolute;
             top: 10px;
-            right: 90px; /* à esquerda do Close */
+            right: 90px; /* fica à esquerda do Close */
             background-color: #4CAF50;
             color: #fff;
             border: none;
@@ -140,55 +155,116 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease;
         }
-        .modal-print-btn:hover { background-color: #45a049; }
+        .modal-print-btn:hover {
+            background-color: #45a049;
+        }
 
+        /* Base class for formatted text, now all bold and slightly larger */
         .formatted-text {
             line-height: 1.6;
-            font-size: 1.1rem;
-            font-weight: bold;
+            font-size: 1.1rem; /* slightly bigger font */
+            font-weight: bold; /* ALL text in bold */
             color: #444;
         }
-        .formatted-text h3 { color: #333; margin-top: 1.5em; margin-bottom: 0.5em; }
-        .formatted-text strong { color: #4CAF50; }
-        .formatted-text em { font-style: italic; }
-        .formatted-text ul { margin-left: 1.5em; margin-bottom: 1em; }
-        .formatted-text li { margin-bottom: 0.5em; }
-        .formatted-text hr { margin: 20px 0; border: 0; border-top: 1px solid #ccc; }
-        .formatted-text p { margin-bottom: 1em; }
-        .formatted-text br { margin-bottom: 1em; }
 
-        @media (max-width: 800px) {
-            .content { padding: 50px 15px 15px; margin: 20px auto; }
-            h1 { font-size: 2.2rem; }
-            h2 { font-size: 1.6rem; }
-            .buttons button { font-size: 0.9rem; }
+        .formatted-text h3 {
+            color: #333;
+            margin-top: 1.5em;
+            margin-bottom: 0.5em;
         }
 
-        /* Modal */
+        .formatted-text strong {
+            color: #4CAF50; /* highlight for double-bold is not very visible but kept for color difference */
+        }
+
+        .formatted-text em {
+            font-style: italic;
+        }
+
+        .formatted-text ul {
+            margin-left: 1.5em;
+            margin-bottom: 1em;
+        }
+
+        .formatted-text li {
+            margin-bottom: 0.5em;
+        }
+
+        .formatted-text hr {
+            margin: 20px 0;
+            border: 0;
+            border-top: 1px solid #ccc;
+        }
+
+        .formatted-text p {
+            margin-bottom: 1em;
+        }
+
+        .formatted-text br {
+            margin-bottom: 1em;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 800px) {
+            .content {
+                padding: 50px 15px 15px;
+                margin: 20px auto;
+            }
+
+            h1 {
+                font-size: 2.2rem;
+            }
+
+            h2 {
+                font-size: 1.6rem;
+            }
+
+            .buttons button {
+                font-size: 0.9rem;
+            }
+        }
+
+        /* Styles for the image modal */
         .modal-overlay {
             position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: rgba(0,0,0,0.8);
-            display: flex; align-items: center; justify-content: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             z-index: 9999;
         }
+
         .modal-content img {
-            max-width: 80%; max-height: 80%;
-            display: block; margin: auto;
+            max-width: 80%;
+            max-height: 80%;
+            display: block;
+            margin: auto;
         }
+
         .modal-close-btn {
             position: absolute;
-            top: 20px; right: 20px;
-            background-color: #ddd; border: none;
-            padding: 8px 12px; cursor: pointer; border-radius: 5px;
+            top: 20px;
+            right: 20px;
+            background-color: #ddd;
+            border: none;
+            padding: 8px 12px;
+            cursor: pointer;
+            border-radius: 5px;
         }
-        .modal-close-btn:hover { background-color: #bbb; }
+
+        .modal-close-btn:hover {
+            background-color: #bbb;
+        }
     </style>
 </head>
 <body>
     <h1>Teacher Resources</h1>
     
+    <!-- Top buttons (removed "Lesson Plan" as requested before) -->
     <div class="buttons">
         <button onclick="goBackToLevel()">Back</button>
     </div>
@@ -204,6 +280,7 @@
         </a>
     </div>
 
+    <!-- Teachers Guide container -->
     <div class="content" id="teachersGuideContainer">
         <button class="close-btn" onclick="closeTeachersGuide()">X</button>
         <div id="teachersGuideContent" class="formatted-text"></div>
@@ -220,6 +297,7 @@
         </a>
     </div>
 
+    <!-- Creative Activity container -->
     <div class="content" id="creativeActivityContainer">
         <button class="close-btn" onclick="closeCreativeActivity()">X</button>
         <div id="creativeActivityContent" class="formatted-text"></div>
@@ -235,17 +313,41 @@
     </div>
 
     <script>
+        /**
+         * Go back to the previous level
+         */
         function goBackToLevel() {
             const currentUrl = window.location.href;
             const url = new URL(currentUrl);
+
+            // Remove "teacher" do final da pathname
             let pathParts = url.pathname.split('/');
-            if (pathParts[pathParts.length - 1] === "") pathParts.pop();
-            if (pathParts[pathParts.length - 1] === "teacher") pathParts.pop();
+            
+            // Remove string vazia no final se a URL terminar com /
+            if (pathParts[pathParts.length - 1] === "") {
+                pathParts.pop();
+            }
+
+            if (pathParts[pathParts.length - 1] === "teacher") {
+                pathParts.pop(); // remove "teacher"
+            }
+
+            // Constrói a nova URL (sem "teacher")
             const newPath = pathParts.join('/') + '/index.html';
             const newUrl = `${url.origin}${newPath}`;
+
             window.location.href = newUrl;
         }
 
+        /**
+         * Convert plain text to basic HTML formatting:
+         * - Lines starting with ### => <h3>
+         * - Lines with '---' => <hr>
+         * - **bold** => <strong>
+         * - lines starting with '- ' => <li> inside a <ul>
+         * - blank lines => <br>
+         * - otherwise => <p> line
+         */
         function parsePlainTextToHtml(text) {
             const lines = text.split('\n');
             let html = '';
@@ -254,28 +356,48 @@
             for (let line of lines) {
                 let trimmed = line.trim();
 
+                // If line is '---'
                 if (trimmed === '---') {
-                    if (inUl) { html += '</ul>'; inUl = false; }
-                    html += '<hr>'; continue;
+                    if (inUl) {
+                        html += '</ul>';
+                        inUl = false;
+                    }
+                    html += '<hr>';
+                    continue;
                 }
 
+                // If line starts with ### => <h3>
                 if (trimmed.startsWith('###')) {
-                    if (inUl) { html += '</ul>'; inUl = false; }
+                    if (inUl) {
+                        html += '</ul>';
+                        inUl = false;
+                    }
                     let content = trimmed.replace(/^###\s*/, '');
                     content = applyBold(content);
-                    html += `<h3>${content}</h3>`; continue;
+                    html += `<h3>${content}</h3>`;
+                    continue;
                 }
 
+                // If line starts with '- ' => list item
                 if (trimmed.startsWith('- ')) {
-                    if (!inUl) { html += '<ul>'; inUl = true; }
+                    if (!inUl) {
+                        html += '<ul>';
+                        inUl = true;
+                    }
                     let content = trimmed.replace(/^- /, '');
                     content = applyBold(content);
-                    html += `<li>${content}</li>`; continue;
+                    html += `<li>${content}</li>`;
+                    continue;
                 }
 
-                if (inUl) { html += '</ul>'; inUl = false; }
+                // If none of the above => treat as a paragraph
+                if (inUl) {
+                    html += '</ul>';
+                    inUl = false;
+                }
 
                 if (trimmed.length === 0) {
+                    // blank line => <br>
                     html += '<br>';
                 } else {
                     let content = applyBold(line);
@@ -283,14 +405,24 @@
                 }
             }
 
-            if (inUl) html += '</ul>';
+            // close any open <ul>
+            if (inUl) {
+                html += '</ul>';
+            }
+
             return html;
         }
 
+        /**
+         * Convert **text** into <strong>text</strong>
+         */
         function applyBold(str) {
             return str.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
         }
 
+        /**
+         * Show text file content in the Teachers Guide container
+         */
         function showTeachersGuideContent(fileName) {
             closeCreativeActivity();
             fetch(fileName)
@@ -301,11 +433,17 @@
                 const formatted = parsePlainTextToHtml(data);
                 contentDiv.innerHTML = formatted;
                 container.style.display = 'block';
+                // Smooth scroll to container
                 container.scrollIntoView({ behavior: 'smooth' });
             })
-            .catch(error => { console.error('Error loading text file:', error); });
+            .catch(error => {
+                console.error('Error loading text file:', error);
+            });
         }
 
+        /**
+         * Close the Teachers Guide container
+         */
         function closeTeachersGuide() {
             const container = document.getElementById('teachersGuideContainer');
             const contentDiv = document.getElementById('teachersGuideContent');
@@ -313,6 +451,9 @@
             container.style.display = 'none';
         }
 
+        /**
+         * Show text file content in the Creative Activity container
+         */
         function showCreativeActivityContent(fileName) {
             closeTeachersGuide();
             fetch(fileName)
@@ -325,9 +466,14 @@
                 container.style.display = 'block';
                 container.scrollIntoView({ behavior: 'smooth' });
             })
-            .catch(error => { console.error('Error loading text file:', error); });
+            .catch(error => {
+                console.error('Error loading text file:', error);
+            });
         }
 
+        /**
+         * Close the Creative Activity container
+         */
         function closeCreativeActivity() {
             const container = document.getElementById('creativeActivityContainer');
             const contentDiv = document.getElementById('creativeActivityContent');
@@ -335,12 +481,15 @@
             container.style.display = 'none';
         }
 
-        /* ---- Documents ---- */
+        /**
+         * Show image thumbnails (documents) in the Creative Activity container
+         */
         function showDocuments() {
             closeTeachersGuide();
             const container = document.getElementById('creativeActivityContainer');
             const contentDiv = document.getElementById('creativeActivityContent');
 
+            // Example list of image files
             const imageFiles = [
                 'imagem1.png',
                 'imagem2.png',
@@ -375,7 +524,10 @@
             container.scrollIntoView({ behavior: 'smooth' });
         }
 
-        /* Modal com botão Print */
+        /**
+         * Open modal to show an enlarged image
+         * (ATUALIZADO: adiciona botão Print)
+         */
         function openImageModal(imgSrc) {
             const overlay = document.createElement('div');
             overlay.className = 'modal-overlay';
@@ -389,19 +541,125 @@
             document.body.appendChild(overlay);
         }
 
+        /**
+         * Close the image modal
+         */
         function closeModal() {
             const overlay = document.querySelector('.modal-overlay');
-            if (overlay) document.body.removeChild(overlay);
+            if (overlay) {
+                document.body.removeChild(overlay);
+            }
         }
 
-        function printImage(imgSrc) {
-            try {
-                const absoluteSrc = new URL(imgSrc, window.location.href).href;
-                const printWin = window.open('', '_blank');
-                if (!printWin) { alert('Por favor, permita pop-ups para imprimir a imagem.'); return; }
+        /**
+         * Utilitários de detecção para PWA/iOS
+         */
+        function isStandaloneDisplayMode() {
+            return window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone === true;
+        }
+        function isIOS() {
+            const ua = window.navigator.userAgent;
+            const iOS = /iP(ad|hone|od)/.test(ua) || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
+            return iOS;
+        }
 
-                printWin.document.open();
-                printWin.document.write(`<!DOCTYPE html>
+        /**
+         * Fallback por <iframe> oculto (funciona bem em PWA Android/desktop)
+         */
+        function printViaIframe(absoluteSrc) {
+            return new Promise((resolve, reject) => {
+                try {
+                    const iframe = document.createElement('iframe');
+                    iframe.style.position = 'fixed';
+                    iframe.style.right = '0';
+                    iframe.style.bottom = '0';
+                    iframe.style.width = '0';
+                    iframe.style.height = '0';
+                    iframe.style.border = '0';
+                    iframe.setAttribute('aria-hidden', 'true');
+
+                    // Usamos srcdoc para centralizar a imagem na página de impressão
+                    iframe.srcdoc = `
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Print</title>
+<style>
+  @media print { html, body { margin: 0; } }
+  html, body { height: 100%; }
+  body {
+    margin: 0; padding: 0;
+    display: flex; align-items: center; justify-content: center;
+    height: 100vh;
+  }
+  img { max-width: 100%; max-height: 100vh; display: block; }
+</style>
+</head>
+<body>
+  <img src="${absoluteSrc}" alt="Print">
+  <script>
+    (function() {
+      const img = document.querySelector('img');
+      function doPrint() {
+        try { window.focus(); window.print(); }
+        finally {
+          // não fechamos a aba; o host removerá o iframe depois
+        }
+      }
+      if (img && !img.complete) { img.onload = doPrint; img.onerror = doPrint; }
+      else { doPrint(); }
+    })();
+  <\/script>
+</body>
+</html>`;
+
+                    document.body.appendChild(iframe);
+
+                    // Tenta detectar fim da impressão para remover o iframe
+                    const cleanup = () => {
+                        try { document.body.removeChild(iframe); } catch(e){}
+                        resolve();
+                    };
+                    // onafterprint pode não existir, então removemos com timeout como garantia
+                    let printed = false;
+                    iframe.onload = () => {
+                        // Se em 2s nada acontecer, ainda assim limpar
+                        setTimeout(() => { if (!printed) cleanup(); }, 2000);
+                    };
+                    // Tenta escutar o evento no contexto do iframe
+                    setTimeout(() => {
+                        try {
+                            const iw = iframe.contentWindow;
+                            if (iw) {
+                                iw.onafterprint = () => { printed = true; cleanup(); };
+                            } else {
+                                cleanup();
+                            }
+                        } catch { cleanup(); }
+                    }, 100);
+                } catch (err) {
+                    reject(err);
+                }
+            });
+        }
+
+        /**
+         * Print the enlarged image (com fallbacks para PWA/iOS)
+         */
+        function printImage(imgSrc) {
+            const absoluteSrc = new URL(imgSrc, window.location.href).href;
+            const inStandalone = isStandaloneDisplayMode();
+            const isiOS = isIOS();
+
+            // Caminho 1: Popup + window.print (ótimo em Android/desktop, inclusive PWA)
+            // Evitamos em iOS standalone, que costuma bloquear/ignorar.
+            if (!(isiOS && inStandalone)) {
+                try {
+                    const printWin = window.open('', '_blank');
+                    if (printWin) {
+                        printWin.document.open();
+                        printWin.document.write(`<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -438,10 +696,27 @@
   <\/script>
 </body>
 </html>`);
-                printWin.document.close();
-            } catch (e) {
-                console.error('Erro ao imprimir a imagem:', e);
+                        printWin.document.close();
+                        return; // sucesso no caminho 1
+                    }
+                } catch (e) {
+                    // continua para fallback
+                }
             }
+
+            // Caminho 2: Fallback via IFRAME (bom para PWA Android/desktop; tenta no iOS também)
+            printViaIframe(absoluteSrc).catch(() => {}).finally(() => {
+                // Caminho 3: Mensagem de orientação para iOS standalone, se ainda necessário
+                if (isiOS && inStandalone) {
+                    alert(
+`No iOS em modo app (PWA), a impressão pode não abrir automaticamente.
+Opções:
+1) Toque em "Compartilhar" (Share) do sistema e escolha "Imprimir".
+2) Abra esta página no Safari e tente novamente.
+3) Ou toque e segure a imagem, escolha "Salvar" e imprima a partir do app Fotos.`
+                    );
+                }
+            });
         }
     </script>
 </body>
