--- a/Level0/Unit1/teacher/index.html
+++ b/Level0/Unit1/teacher/index.html
@@ -709,11 +709,11 @@
                 // Caminho 3: Mensagem de orientação para iOS standalone, se ainda necessário
                 if (isiOS && inStandalone) {
                     alert(
-`No iOS em modo app (PWA), a impressão pode não abrir automaticamente.
-Opções:
-1) Toque em "Compartilhar" (Share) do sistema e escolha "Imprimir".
-2) Abra esta página no Safari e tente novamente.
-3) Ou toque e segure a imagem, escolha "Salvar" e imprima a partir do app Fotos.`
+`On iOS when using the app in standalone (PWA) mode, printing may not open automatically.
+Options:
+1) Tap the system "Share" icon and choose "Print".
+2) Open this page in Safari and try again.
+3) Or tap and hold the image, choose "Save Image", and print it from the Photos app.`
                     );
                 }
             });
