--- a/Level0/Unit1/index - Copy.html
+++ b/Level0/Unit1/index - Copy.html
@@ -110,7 +110,7 @@
 
     .teacher-resources {
       grid-column: span 2;
-      display: none; /* controlado por role */
+      display: none;
       justify-content: center;
       align-items: center;
       padding: 15px;
@@ -133,7 +133,7 @@
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
 
-    /* Botão ROBÔ LEX (grid próprio) */
+    /* Botão ROBÔ LEX (já existente) */
     .robot-lex {
       grid-column: span 2;
       display: flex;
@@ -159,7 +159,33 @@
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
 
-    /* Botão HANNAH VIDEO (grid próprio) */
+    /* Botão TEST (já existente) */
+    .test-button {
+      grid-column: span 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 15px;
+      background-color: #FFFFFF;
+      border: 2px solid #4CAF50;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      text-decoration: none;
+    }
+
+    .test-button img {
+      width: 100%;
+      height: auto;
+      max-width: 130px;
+    }
+
+    .test-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    /* NOVO: Botão HANNAH VIDEO (grid próprio como Test e Robô Lex) */
     .hannah-video {
       grid-column: span 2;
       display: flex;
@@ -188,6 +214,7 @@
     @media (max-width: 400px) {
       .teacher-resources,
       .robot-lex,
+      .test-button,
       .hannah-video {
         grid-column: span 1;
       }
@@ -212,7 +239,7 @@
   </div>
 
   <script>
-  // Cria dinamicamente os botões de atividade (SEM NENHUM BOTÃO DE TEST)
+  // Cria dinamicamente os botões de atividade, incluindo TEST, ROBÔ LEX e o NOVO HANNAH VIDEO
   document.addEventListener("DOMContentLoaded", () => {
     const pathParts = window.location.pathname.split("/");
     const level = pathParts[1] || "Level1";
@@ -220,7 +247,7 @@
 
     const container = document.getElementById("activity-buttons");
 
-    // 1) Botão: HANNAH VIDEO (aparece para todos, grid próprio, primeiro após Teacher)
+    // 1) NOVO Botão: HANNAH VIDEO (aparece para todos, grid próprio, primeiro após Teacher)
     const hannahVideo = document.createElement("a");
     hannahVideo.href = `/Atividades/HannahVideo/index.html?level=${level}&unit=${unit}`;
     hannahVideo.className = "activity-button hannah-video";
@@ -229,6 +256,8 @@
     hvImg.alt = "Hannah Video";
     hannahVideo.appendChild(hvImg);
 
+    // Inserir imediatamente após o .teacher-resources, se existir;
+    // caso contrário, inserir no início do container.
     const teacherEl = container.querySelector(".teacher-resources");
     if (teacherEl) {
       teacherEl.insertAdjacentElement("afterend", hannahVideo);
@@ -236,20 +265,21 @@
       container.prepend(hannahVideo);
     }
 
-    // 2) Botões normais (trechos) — sem o trecho7 (Test)
+    // 2) Botões normais (trechos)
     const buttonData = [
-      { trecho: "trecho1", img: "../../imagens/listening.png",    alt: "Listening" },
-      { trecho: "trecho2", img: "../../imagens/grammar.png",      alt: "Grammar" },
-      { trecho: "trecho3", img: "../../imagens/speaking.png",     alt: "Speaking" },
-      { trecho: "trecho4", img: "../../imagens/writing.png",      alt: "Writing" },
-      { trecho: "trecho5", img: "../../imagens/Bible.png",        alt: "Bible" },
-      { trecho: "trecho6", img: "../../imagens/test.png",       alt: "Test", className: "test-button" }
+      { trecho: "trecho1", img: "../../imagens/listening.png",  alt: "Listening" },
+      { trecho: "trecho2", img: "../../imagens/grammar.png",    alt: "Grammar" },
+      { trecho: "trecho3", img: "../../imagens/speaking.png",   alt: "Speaking" },
+      { trecho: "trecho4", img: "../../imagens/writing.png",    alt: "Writing" },
+      { trecho: "trecho5", img: "../../imagens/Bible.png",      alt: "Bible" },
+      { trecho: "trecho6", img: "../../imagens/apresentacao.png", alt: "Apresentação" },
+      { trecho: "trecho7", img: "../../imagens/test.png",       alt: "Test", className: "test-button" }
     ];
 
     buttonData.forEach(data => {
       const a = document.createElement("a");
       a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
-      a.className = "activity-button";
+      a.className = "activity-button" + (data.className ? ` ${data.className}` : "");
       const img = document.createElement("img");
       img.src = data.img;
       img.alt = data.alt;
